--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^2.22.1"
   },
   "devDependencies": {
+    "dotenv": "^9.0.2",
     "nodemon": "^2.0.7",
     "prisma": "^2.22.1"
   }
